--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My simple website</title>
+    <link rel="stylesheet" href="Styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ullam, quaerat libero doloremque ipsum provident natus, perferendis eius iusto obcaecati optio consequuntur soluta. Debitis quod at, dolor velit praesentium ducimus.</p>
+    </div>
 </body>
 </html>
