--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h3>My first website</h3>
+        <h3>My first Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ullam, quaerat libero doloremque ipsum provident natus, perferendis eius iusto obcaecati optio consequuntur soluta. Debitis quod at, dolor velit praesentium ducimus.</p>
+    </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ullam, quaerat libero doloremque ipsum provident natus, perferendis eius iusto obcaecati optio consequuntur soluta. Debitis quod at, dolor velit praesentium ducimus.</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ullam, quaerat libero doloremque ipsum provident natus, perferendis eius iusto obcaecati optio consequuntur soluta. Debitis quod at, dolor velit praesentium ducimus.</p>
     </div>
 </body>
