--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
         <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ullam, quaerat libero doloremque ipsum provident natus, perferendis eius iusto obcaecati optio consequuntur soluta. Debitis quod at, dolor velit praesentium ducimus.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful message"</li>
+            <li>git push</li>
+
+        </ul>
+    </div>
 </body>
 </html>
